force-app/main/default/objects/Message__c/Message__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>メッセージ</label>
</CustomObject>