force-app/main/default/objects/Message__c/fields/AccountRegisterDecisionRealEstate__c.field-meta.xml
<CustomField>
    <fullName>AccountRegisterDecisionRealEstate__c</fullName>
    <label>企業社員決定物件登録メッセージ</label>
    <type>TextArea</type>
</CustomField>