force-app/main/default/objects/Message__c/fields/FailureDecisionContactToEmployee__c.field-meta.xml
<CustomField>
    <fullName>FailureDecisionContactToEmployee__c</fullName>
    <label>企業社員決定連絡通知失敗</label>
    <type>TextArea</type>
</CustomField>