force-app/main/default/objects/Message__c/fields/FaxConnectErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>FaxConnectErrorMessage__c</fullName>
    <label>FAX接続失敗</label>
    <type>TextArea</type>
</CustomField>