force-app/main/default/objects/Message__c/fields/FaxErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>FaxErrorMessage__c</fullName>
    <label>Fax処理失敗</label>
    <type>TextArea</type>
</CustomField>