force-app/main/default/objects/Message__c/fields/FixPaymentMessage__c.field-meta.xml
<CustomField>
    <fullName>FixPaymentMessage__c</fullName>
    <description>車庫証明で決裁申請時に駐車場代の前納が起こる場合、家賃を止める必要があるが、支払レコードが月初めに既に作成されている場合は修正依頼を送る必要がある</description>
    <label>家賃支払いレコード修正依頼メッセージ</label>
    <type>TextArea</type>
</CustomField>