force-app/main/default/objects/Message__c/fields/NoDecisionRealEstateCheckMasterMessage__c.field-meta.xml
<CustomField>
    <fullName>NoDecisionRealEstateCheckMasterMessage__c</fullName>
    <label>決定物件チェックマスタ無しアラート</label>
    <type>TextArea</type>
</CustomField>