force-app/main/default/objects/Message__c/fields/NotFoundEmailTemplateMessage__c.field-meta.xml
<CustomField>
    <fullName>NotFoundEmailTemplateMessage__c</fullName>
    <label>メールテンプレート取得エラーメッセージ</label>
    <type>TextArea</type>
</CustomField>