force-app/main/default/objects/Message__c/fields/NotificationTemplateMessage__c.field-meta.xml
<CustomField>
    <fullName>NotificationTemplateMessage__c</fullName>
    <label>通知テンプレート取得エラーメッセージ</label>
    <type>TextArea</type>
</CustomField>