force-app/main/default/objects/Message__c/fields/NotSendErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>NotSendErrorMessage__c</fullName>
    <label>自動通知エラーメッセージ</label>
    <type>TextArea</type>
</CustomField>