force-app/main/default/objects/Message__c/fields/RegisterWithoutMediationTodoMessage__c.field-meta.xml
<CustomField>
    <fullName>RegisterWithoutMediationTodoMessage__c</fullName>
    <label>未斡旋依頼の決定物件登録Todo</label>
    <type>TextArea</type>
</CustomField>